# edu-ai-agents

./: .bandit-baseline.json  .cfnlintrc  .gitignore  .secrets.baseline  AGP-CONFORMANCE.md  AWS-RUN-COST.md  CONTRIBUTING.md  EDU-Agentic-AI-Suite-Executive-Overview.pptx  EDU-One-Pager.pptx  ENTERPRISE-PLATFORM.md  LICENSE  MATURITY.yaml  Makefile  NOT-CLAIMS.md  OPERATING-MODEL.md  README.md  RELEASE-PACKET.md  SECURITY.md  SOLUTION-FIELD-GUIDE.md  SUITE-STATUS.md  package-lock.json  package.json  pytest.ini
.github/: dependabot.yml
01-student-family-concierge/: .env.example  Dockerfile  README.md  SECURITY-EVIDENCE-PACK.md  app.py  requirements.txt
02-tutor-study-companion/: .env.example  Dockerfile  README.md  app.py  requirements.txt
03-educator-copilot/: .env.example  Dockerfile  README.md  app.py  (+1 more)
platform_core/: pyproject.toml  requirements-lock.txt
platform_core/edu_agent_platform/: __init__.py  auth.py  generation.py  llm_factory.py  secrets.py  tracing.py
platform_core/edu_agent_platform/connectors/: __init__.py  base.py  collegescorecard.py  factory.py  fixtures.py  live.py
platform_core/edu_agent_platform/mcp_gateway/: README.md  __init__.py  approval_store.py  approvals.py  audit.py  errors.py  gateway.py  metrics.py  policy.py
platform_core/edu_agent_platform/pii_masker/: __init__.py
platform_core/edu_agent_platform/reviewer/: __init__.py  app.py  review_service.py
platform_core/tests/: test_agp_conformance.py  test_approvals.py  test_auth.py  test_budget.py  test_gateway.py  test_gateway_hardening.py  test_record_authz.py  test_reviewer.py
(+297 files in other folders)
